--- a/static/css/style.css
+++ b/static/css/style.css
@@ -361,7 +361,12 @@ textarea {
     color:#444;
     padding-top:27px;
 }
-.post-content h2,.post-content h3,.post-content h4,.post-content h5,.post-content h6 {
+.post-content h2
+{
+    font-size: 1.5em;
+    color: #444;
+}
+.post-content h3,.post-content h4,.post-content h5,.post-content h6 {
     color: #ba3925;
 }
 .page-content{
@@ -620,7 +625,7 @@ textarea.textarea {
     word-wrap:break-word;
     padding:10px 40px 10px 0;
 }
-.post-content h2, .comment-content h2 {
+.comment-content h2 {
     font-size:1.28571em;
 }
 .post-content img, .comment-content img {
