--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,10 +17,10 @@
         </div>
         {{ end }}
         {{ if .Site.Params.busuanzi }}
-        <div class="post-meta">
+        <!--<div class="post-meta">
             <span id="busuanzi_container_page_pv">|<span id="busuanzi_value_page_pv"></span><span>
                     阅读</span></span>
-        </div>
+        </div>-->
         {{ end }}
         {{ if .Params.toc }}
         <div class="clear" style="display: none">
